# transaction-fraud-risk-strategy

./: .gitattributes  .gitignore  LICENSE  README.md  data-sources.md  pyproject.toml  requirements.txt
data/: data_manifest.md
data/powerbi/: cost_assumptions.csv  deployment_scenarios.csv  kpi_amount_band_risk.csv  kpi_amount_by_class.csv  kpi_class_balance.csv  kpi_fraud_by_hour.csv  scenario_comparison.csv  threshold_cost_table.csv
docs/: explain-it-to-me.md
notebooks/: fraud_risk_analysis.ipynb
outputs/: amount_by_class.csv  class_balance.csv  data_profile.json  data_quality_report.md  hourly_fraud_patterns.csv  model_card.md  model_metrics.csv  model_run_metadata.json  precision_recall_curve.csv
power-bi/: README.md  dashboard_brief.md  data_model.md  dax_measures.md  manual_build_instructions.md  refresh_instructions.md
reports/: strategy_deck.md  summary.md
scripts/: build_deck.py  download_data.py  make_notebook.py  make_sample.py  run_all.py  run_eda.py  run_modeling.py  run_sql.py
sql/: README.md  analysis_queries.sql  create_tables.sql  data_quality_checks.sql  kpi_views.sql
src/fraud_risk/: __init__.py  config.py  costs.py  data.py  modeling.py  reporting.py  viz.py
tests/: test_costs.py  test_data.py
