[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "transaction-fraud-risk-strategy"
version = "1.0.0"
description = "Credit card fraud detection, threshold economics, and risk strategy"
authors = [{ name = "Shalom Wu" }]
requires-python = ">=3.11"

[tool.setuptools.packages.find]
where = ["src"]

